[tool.poetry]
name = "qapi"
version = "0.1.0"
description = ""
authors = ["Jorge Escobar <j@jorge3.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Quart = "0.15.1"
python-dotenv = "0.10.1"
pytest = "6.2.1"
pytest-asyncio = "0.15.1"
alembic = "1.6.5"
psycopg2-binary = "2.9.1"
databases = {version = "0.4.1", extras = ["postgresql"]}
sqlalchemy = "1.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.7b0", allow-prereleases = true}

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
